--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
-contourpy
+contourpy==1.3.0
 cycler==0.12.1
 et_xmlfile==2.0.0
 fonttools==4.55.1
