--- a/.github/workflows/auto_run.yml
+++ b/.github/workflows/auto_run.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Commit and Push Results
         run: |
-          git config --global user.email "your-email@example.com"
+          git config --global user.email "gavel.rajesh@gmail.com"
           git config --global user.name "GitHub Actions"
           git add momentum_output.csv
           git commit -m "Auto-update: Latest momentum ranking output" || echo "No changes to commit"
