--- a/.github/workflows/auto_run.yml
+++ b/.github/workflows/auto_run.yml
@@ -25,9 +25,11 @@ jobs:
         run: python momn_streamlit_app.py
 
       - name: Commit and Push Results
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.email "gavel.rajesh@gmail.com"
           git config --global user.name "GitHub Actions"
           git add momentum_output.csv
           git commit -m "Auto-update: Latest momentum ranking output" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/prayan2702/Streamlit-momn.git
