--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,6 @@ urllib3==2.2.3
 watchdog==6.0.0
 webencodings==0.5.1
 yfinance==0.2.54
-curl-cffi==0.5.8
+curl_cffi==0.5.8
 requests-cache==1.1.0
 requests-ratelimiter==0.4.1
